--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 /*Importing google fonts*/
-@import url('https://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Lexend+Tera:100,200,300,400,500,600,700');
 
 /*Global CSS selectors which affect all the webpages*/
-/*Setting the font to Exo 2 and the text color to black*/
+/*Setting font to Lexend Tera and the text color to black*/
 body {
-    font-family: "Exo 2", sans-serif;
+    font-family: "Lexend Tera", sans-serif;
     color: #000000;
     margin: 0;
     padding: 0;
@@ -20,4 +20,11 @@ body {
 /*Setting all a elements text color to black*/
 a {
     color: #000000;
+}
+
+/*index.html*/
+#main-site-heading {
+    font-size: 50px;
+    letter-spacing: 10px;
+    text-transform: uppercase;
 }
