--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,53 @@ a {
     color: #000000;
 }
 
-/*index.html*/
+/*Nav Bar*/
 .main-site-heading {
-    font-size: 50px;
+    padding-top: 10px;
+}
+
+.main-site-heading a {
+    font-size: 40px;
     letter-spacing: 10px;
     text-transform: uppercase;
+    text-decoration: none;
+}
+
+.main-site-heading a:hover {
+    color: #ffffff;
+    background-color: #808080;
+}
+
+.main-nav {
     background-color: #f2f2f2;
-    padding-top: 10px;
+    color: #000000;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 5px;
+    font-weight: 500;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #000000;
+}
+
+.navbar-light:hover .navbar-nav:hover .nav-link:hover {
+    color: #ffffff;
+    background-color: #808080;
+}
+
+.navbar-light .navbar-nav .nav-link.active-nav {
+    color: #ffffff;
+    background-color: #808080
+}
+
+.nav-link {
+    margin-left: 20px;
+}
+
+.navbar-toggler {
+    margin: 0 auto;
+    border: 2px solid #000;
+    color: black;
+    width: 100%;
 }
