--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -1,38 +1,84 @@
 /*4K Screen*/
-@media (max-width: 2560px) {}
+@media (min-width: 2560px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 50px;
+        letter-spacing: 20px;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        font-size: 30px;
+        letter-spacing: 10px;
+    }
+
+}
 
 /*Large Laptop*/
-@media (max-width: 1440px) {}
+@media (max-width: 1440px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 26px;
+        letter-spacing: 15px;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        font-size: 16px;
+        letter-spacing: 5px;
+    }
+
+}
 
 /*Medium Laptop*/
-@media (max-width: 1024px) {}
+@media (max-width: 1024px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 24px;
+        letter-spacing: 10px;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        font-size: 14px;
+    }
+
+}
 
 /*Small Laptop*/
-@media (max-width: 991px) {}
+@media (max-width: 991px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 26px;
+        letter-spacing: 10px
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        text-align: center;
+        margin-left: 0px;
+        margin-top: 5px;
+        font-size: 18px;
+        letter-spacing: 5px;
+    }
+
+}
 
 /*Tablet*/
 @media (max-width: 768px) {
 
     /*Nav Bar*/
-    .main-site-heading {
-        text-align: center;
-        padding-top: 10px;
-    }
-
-    .main-site-heading a {
-        font-size: 30px;
+    .navbar-light .navbar-brand {
+        font-size: 26px;
+        letter-spacing: 10px
     }
 
     .navbar-light .navbar-nav .nav-link {
         text-align: center;
-        margin-top: 5px;
         margin-left: 0px;
-    }
-
-    .navbar-light .navbar-nav .nav-link {
-        text-align: center;
         margin-top: 5px;
-        margin-left: 0px;
+        font-size: 18px;
+        letter-spacing: 5px;
     }
 }
 
@@ -40,30 +86,45 @@
 @media (max-width: 425px) {
 
     /*Nav Bar*/
-    .main-site-heading {
-        text-align: center;
-        padding-top: 10px;
-    }
-
-    .main-site-heading a {
-        font-size: 30px;
+    .navbar-light .navbar-brand {
+        font-size: 23px;
+        letter-spacing: 2px
     }
 
     .navbar-light .navbar-nav .nav-link {
         text-align: center;
-        margin-top: 5px;
         margin-left: 0px;
+        margin-top: 5px;
+        font-size: 14px;
+        letter-spacing: 4px;
     }
 
-    .navbar-light .navbar-nav .nav-link {
-        text-align: center;
-        margin-top: 5px;
-        margin-left: 0px;
+    .navbar-light .navbar-toggler {
+        padding: 1px 6px;
     }
+
 }
 
 /*Medium Mobile*/
-@media (max-width: 375px) {}
+@media (max-width: 375px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 19px;
+        margin-right: 0px;
+        letter-spacing: 2px
+    }
+
+}
 
 /*Small Mobile*/
-@media (max-width: 320px) {}
+@media (max-width: 320px) {
+
+    /*Nav Bar*/
+    .navbar-light .navbar-brand {
+        font-size: 15px;
+        margin-right: 0px;
+        letter-spacing: 2px
+    }
+
+}
