fix: position fix for scroll to top button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ a {
 }
 
 .navbar-light .navbar-toggler {
-    border-color: #808080;
+    border-color: #f0f0f0;
 }
 
 .navbar-light .navbar-toggler-icon {
