--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -117,6 +117,7 @@
     }
 
     .navbar-light .navbar-nav .nav-link {
+        display: block;
         text-align: center;
         margin-left: 0px;
         margin-top: 5px;
@@ -143,7 +144,7 @@
 
     /*Back To Top Button*/
     #to-top-btn {
-        bottom: 175px;
+        bottom: 180px;
         right: 5px;
     }
 
