--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,6 @@ a {
     letter-spacing: 10px;
     font-weight: 500;
     font-size: 30px;
-
 }
 
 .navbar-light .navbar-brand:hover {
@@ -59,7 +58,6 @@ a {
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 5px;
-    line-height: 18px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -96,10 +94,36 @@ a {
     margin-top: 4px;
 }
 
-/*Main Section*/
+/*Main Section index.html*/
 .main-con {
     height: 1000px;
     margin: 20px 0px;
+}
+
+.step-one,
+.step-two,
+.step-three {
+    background-color: #f0f0f0;
+    height: 200px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: center;
+    padding-top: 25px;
+}
+
+.step-two {
+    border-left: 2px solid #808080;
+    border-right: 2px solid #808080;
+}
+
+.left-options {
+    text-align: left;
+    font-size: 13px;
+}
+
+.right-options {
+    text-align: left;
+    font-size: 13px;
 }
 
 /*Footer*/
@@ -186,3 +210,17 @@ a {
     opacity: 1;
     visibility: visible;
 }
+
+/*Overlay*/
+/*.overlay {
+    background-color: #808080;
+    width: 100%;
+    height: 1000px;
+    position: fixed;
+    z-index: 2000;
+    text-align: center;
+}
+
+#overlay-heading {
+    margin-top: 400px;
+}*/
