--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -129,6 +129,37 @@
         padding: 1px 6px;
     }
 
+    /*Main section index.html*/
+    .step-one,
+    .step-two,
+    .step-three {
+        padding-top: 15px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+    .step-one,
+    .step-two {
+        border-left: none;
+        border-right: none;
+        border-bottom: 2px solid #808080;
+        padding-top: 45px;
+    }
+
+    .left-options {
+        text-align: left;
+        font-size: 11px;
+        letter-spacing: 2px;
+        margin-top: 10px;
+    }
+
+    .right-options {
+        text-align: left;
+        font-size: 11px;
+        letter-spacing: 2px;
+        margin-top: 10px;
+    }
+
     /*Footer*/
     .social-logos {
         margin-bottom: 5px
