--- a/assets/css/google_maps.css
+++ b/assets/css/google_maps.css
@@ -1,19 +1,19 @@
+html,
+body,
+.gmaps-con,
+.gmaps-row,
+.gmaps-column {
+    height: 100%;
+}
+
+.gmaps-res-column {
+    margin-top: 50px;
+}
+
 /* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
 #map {
     height: 100%;
-}
-
-/* Optional: Makes the sample page fill the window. */
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    padding: 0 !important;
 }
 
 table {
@@ -21,33 +21,26 @@ table {
 }
 
 .hotel-search {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 440px;
 
 }
 
 #map {
-    margin-top: 40px;
-    width: 100%
+    margin-top: 10px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #listing {
     width: 100%;
-    height: 500px;
-    overflow: auto;
+    height: 100%;
     cursor: pointer;
-    overflow-x: hidden;
 }
 
-#findhotels {
-    font-size: 14px;
-}
 
 #locationField {
     -webkit-box-flex: 1 1 190px;
