--- a/assets/css/google_maps.css
+++ b/assets/css/google_maps.css
@@ -1,72 +1,29 @@
-html,
-body,
-.gmaps-con,
-.gmaps-row,
-.gmaps-column {
-    height: 100%;
+#town-city {
+    width: 50%;
 }
 
-.gmaps-res-column {
-    margin-top: 50px;
-}
-
-/* Always set the map height explicitly to define the size of the div
-* element that contains the map. */
-#map {
-    height: 100%;
-}
-
-table {
-    font-size: 12px;
-}
-
-.hotel-search {
-    align-items: center;
-    background: #fff;
-    display: flex;
-    width: 440px;
-
+#country-list {
+    width: 50%;
 }
 
 #map {
-    margin-top: 10px;
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    min-height: 600px;
 }
 
 #listing {
-    width: 100%;
-    height: 100%;
     cursor: pointer;
 }
 
-
-#locationField {
-    -webkit-box-flex: 1 1 190px;
-    -ms-flex: 1 1 190px;
-    flex: 1 1 190px;
-    margin: 0 8px;
-}
-
-#controls {
-    -webkit-box-flex: 1 1 140px;
-    -ms-flex: 1 1 140px;
-    flex: 1 1 140px;
-}
-
-#autocomplete {
-    width: 100%;
-}
-
-#country {
+#resultsTable {
     width: 100%;
 }
 
 .placeIcon {
     width: 20px;
     height: 34px;
-    margin: 4px;
+    margin: 10px;
 }
 
 .hotelIcon {
@@ -74,10 +31,6 @@ table {
     height: 24px;
 }
 
-#resultsTable {
-    border-collapse: collapse;
-    width: 240px;
-}
 
 #rating {
     font-size: 13px;
