--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ a {
 
 /*Main Section index.html*/
 .main-con {
-    margin: 20px 0px;
+    margin-top: 20px;
 }
 
 .step-one,
@@ -107,6 +107,7 @@ a {
     text-transform: uppercase;
     letter-spacing: 5px;
     text-align: center;
+    border-bottom: 2px solid #808080
 }
 
 .step-one,
@@ -142,6 +143,7 @@ a {
 
 /*Footer*/
 .footer-con {
+    margin-top: 10px;
     background-color: #f0f0f0;
 }
 
