--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -165,6 +165,8 @@
         padding: 0px 0px;
     }
 
+    /*Results Container*/
+
     /*Footer*/
     .social-logos {
         margin-bottom: 5px
