--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,13 @@ a {
     background-color: #000000;
 }
 
-/*From hover.css Sweep To Top bg color*/
+/*From hover.css Sweep To bottom bg color*/
 .hvr-sweep-to-bottom:before {
     background: #808080;
+}
+
+.hvr-sweep-to-bottom {
+    display: block;
 }
 
 /*********************************************************************************/
@@ -206,7 +210,7 @@ a {
 
 /*Back To Top Button*/
 #to-top-btn {
-    background-color: #f0f0f0;
+    background-color: #f5f5f5;
     font-size: 30px;
     width: 50px;
     height: 50px;
@@ -219,6 +223,7 @@ a {
     opacity: 0;
     visibility: hidden;
     z-index: 1;
+    border: 1px solid #808080;
 }
 
 .fa-angle-double-up {
