--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -264,14 +264,17 @@
 
     /*Results Container Show and Hide*/
     .result-heading-show {
-        font-size: 20px
+        display: none;
+        font-size: 20px;
     }
 
     .fa-chevron-down {
         font-size: 15px;
     }
 
+
     .result-heading-hide {
+        display: block;
         font-size: 20px
     }
 
@@ -319,7 +322,7 @@
         font-size: 14px;
         letter-spacing: 0px;
         margin-top: 5px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         padding: 0px 0px;
         margin-left: 20px;
     }
@@ -329,7 +332,7 @@
         font-size: 14px;
         letter-spacing: 0px;
         margin-top: 5px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         padding: 0px 0px;
     }
 
@@ -352,14 +355,14 @@
     .left-options {
         font-size: 12px;
         letter-spacing: 0px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         padding: 0px 0px;
     }
 
     .right-options {
         font-size: 12px;
         letter-spacing: 0px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         padding: 0px 0px;
     }
 
