--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,24 +134,24 @@ a {
 .left-options {
     text-align: right;
     text-transform: capitalize;
-    font-size: 16px;
+    font-size: 15px;
     border-right: 2px solid #808080;
     padding: 0px 10px;
     margin-left: auto;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 }
 
 .right-options {
     text-align: left;
     text-transform: capitalize;
-    font-size: 16px;
+    font-size: 15px;
     padding: 0px 10px;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 }
 
 .left-options label,
 .right-options label {
-    margin: 3px 0px;
+    margin: 2px 0px;
 }
 
 #reset-btn {
@@ -349,35 +349,25 @@ button:focus {
     display: none;
 }
 
+.add-input-fields {
+    width: 80%;
+    margin-bottom: 10px;
+    border: 1px solid #808080;
+    border-radius: 5px;
+    padding: 10px 5px
+}
+
 .send-btn {
     width: 165px;
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 500;
-    border: 1px solid #000000;
+    border: 1px solid #808080;
     color: #000000;
     letter-spacing: 4px;
 }
 
 .send-btn:hover {
-    color: #ffffff;
-    background-color: #ffffff;
-}
-
-.modal-footer {
-    border-top: 2px solid #808080;
-}
-
-.close-btn {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
-    border: 1px solid #000000;
-    color: #000000;
-    letter-spacing: 4px;
-}
-
-.close-btn:hover {
     color: #ffffff;
     background-color: #ffffff;
 }
