--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ a {
 /*From hover.css Sweep To bottom bg color*/
 .hvr-sweep-to-bottom:before {
     background: #808080;
+    color: #ffffff;
 }
 
 /*********************************************************************************/
@@ -358,9 +359,9 @@ button:focus {
 }
 
 .send-btn {
-    width: 165px;
+    width: 145px;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 500;
     border: 1px solid #808080;
     color: #000000;
